# ai-system-debugger

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  start.ps1
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_enriched_trace_schema.py
backend/: Dockerfile  entrypoint.sh  main.py
backend/api/: __init__.py  analysis.py  healing.py  metrics.py  review.py  traces.py
backend/core/: __init__.py  config.py  dependencies.py
backend/models/: __init__.py  schemas.py
backend/services/: __init__.py
backend/services/evaluation/: __init__.py  calibration.py  evaluator.py
backend/services/healing/: __init__.py  engine.py
backend/services/instrumentation/: __init__.py  tracer.py
backend/services/monitoring/: __init__.py  metrics.py
backend/services/rca/: __init__.py  analyzer.py
backend/services/routing/: __init__.py  router.py
backend/storage/: __init__.py  cache.py  database.py  models.py
data/: sample_evaluations.json  sample_healing_scenarios.json  sample_traces.json
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: MetricCard.jsx  PageHeader.jsx  Sidebar.jsx  (+1 more)
scripts/: load_sample_data.py
tests/: conftest.py
tests/integration/: test_api_analysis.py  test_api_health.py  test_api_metrics.py  test_api_traces.py  test_pipeline_e2e.py
tests/unit/: test_evaluation.py  test_instrumentation.py  test_rca.py  test_routing.py  test_schemas.py
(+9 files in other folders)
